--- a/package.json
+++ b/package.json
@@ -7,5 +7,31 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ben Centra <blcentra@gmail.com> (http://bencentra.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "matchdep": "^0.3.0"
+  },
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
+    "matchdep": "^0.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bencentra/jq-signature.git"
+  },
+  "keywords": [
+    "signature",
+    "canvas",
+    "touch"
+  ],
+  "bugs": {
+    "url": "https://github.com/bencentra/jq-signature/issues"
+  },
+  "homepage": "https://github.com/bencentra/jq-signature"
 }
